--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "env-paths": "^1.0.0",
     "is-elevated": "^2.0.1",
     "minimisted": "^2.0.0",
+    "mkdirp": "^0.5.1",
     "os-service": "^2.1.3",
     "sudo-prompt": "^8.2.0"
   },
