--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ notifications:
   email: false
 node_js:
   - '8'
+before_script:
+  - npm install hypergit
 after_success:
   - npm run travis-deploy-once "npm run semantic-release"
 branches:
