--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hypergit-service",
-  "version": "0.0.1",
+  "version": "0.0.0-development",
   "description": "Runs hypergit seed as a background service",
   "bin": "bin/cli.js",
   "keywords": [],
@@ -16,10 +16,20 @@
     "env-paths": "^1.0.0",
     "is-elevated": "^2.0.1",
     "minimisted": "^2.0.0",
+    "mkdirp": "^0.5.1",
     "os-service": "^2.1.3",
     "sudo-prompt": "^8.2.0"
   },
   "peerDependencies": {
     "hypergit": "^3.2.0"
+  },
+  "scripts": {
+    "test": "node bin/cli.js",
+    "semantic-release": "semantic-release",
+    "travis-deploy-once": "travis-deploy-once"
+  },
+  "devDependencies": {
+    "semantic-release": "^15.6.3",
+    "travis-deploy-once": "^5.0.1"
   }
 }
